# skyhigh

./: API-SPECIFICATION.yml  ARCHITECTURE.md  CHAT_HISTORY.md  Dockerfile.baggage  Dockerfile.reservation  Dockerfile.seat  PRD.md  PROJECT_STRUCTURE.md  README.md  TEST_REPORT.md  WORKFLOW_DESIGN.md  docker-compose.yml  pyproject.toml  requirements.txt
services/: __init__.py
services/baggage_service/: __init__.py  application.py  domain.py  main.py
services/reservation_service/: __init__.py  abuse.py  clients.py  domain.py  events.py  main.py
services/seat_service/: __init__.py  application.py  domain.py  infrastructure.py  main.py
skyhigh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skyhigh_core/: __init__.py  application.py  domain.py  infrastructure.py  reservations.py
tests/: inmemory_impl.py  test_application_flow.py  test_baggage_and_payment.py  test_conflict_free_assignment.py  test_seat_lifecycle.py  test_waitlist_assignment.py
